# ATOR_RIQA

./: .gitignore  CLAUDE.md  agents.md  pyproject.toml
docs/: spec-v2.4.2.md
examples/: features.yaml
riqa/: cli.py
riqa/cad/: feature_extract.py  feature_region.py  importer.py
riqa/config/: settings.yaml
riqa/config/scanner_profiles/: creality_ferret_se.yaml
riqa/core/: alignment.py  confidence.py  decision.py  deviation.py  fusion.py  measurement.py  outlier.py  uncertainty.py
riqa/data/: db.py  schema.sql
riqa/recipe/: eligibility.py  manager.py  msa.py
riqa/scanner/: calibration.py  import_ply.py  preprocessing.py  profiles.py
tests/: test_db.py  test_decision.py  test_integration.py  test_io.py  test_measurement.py  test_placeholder.py  test_preprocessing.py
