[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "riqa"
version = "0.0.1"
description = "Risk-limited, feature-gated, scan-assisted receiving inspection QA system"
requires-python = ">=3.11"
license = {text = "Proprietary"}

dependencies = [
    # 3D / point cloud
    "open3d>=0.18",
    "pyvista>=0.43",
    "vtk>=9.3",
    "trimesh>=4.0",

    # CAD import
    "cadquery>=2.4",

    # Numerical / scientific
    "numpy>=1.24",
    "scipy>=1.11",

    # UI
    "PySide6>=6.6",

    # Reports
    "Jinja2>=3.1",
    "weasyprint>=60",

    # Config / data
    "pyyaml>=6.0",

    # Utilities
    "click>=8.1",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.7",
]

[project.scripts]
riqa = "riqa.cli:main"

[tool.setuptools.packages.find]
include = ["riqa*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
